[gd_scene load_steps=5 format=3 uid="uid://bemectp3xdtjp"]

[ext_resource type="Script" path="res://src/Menus/Scripts/Options_Graphics.gd" id="1_friuo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02qbj"]
bg_color = Color(0.145098, 0.14902, 0.160784, 1)

[sub_resource type="InputEventKey" id="InputEventKey_1b0p8"]
device = -1
key_label = 70
unicode = 102

[sub_resource type="Shortcut" id="Shortcut_mr3tj"]
events = [SubResource("InputEventKey_1b0p8")]

[node name="Options_Graphics" type="Panel"]
offset_right = 1036.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxFlat_02qbj")
script = ExtResource("1_friuo")

[node name="Options_Graphics" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="List" type="VBoxContainer" parent="Options_Graphics"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="Options_Graphics/List"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 2
theme_override_constants/check_v_offset = 0
theme_override_font_sizes/font_size = 18
shortcut = SubResource("Shortcut_mr3tj")
text = "Fullscreen
"

[node name="Fullscreen_Modes" type="OptionButton" parent="Options_Graphics/List"]
layout_mode = 2
item_count = 5
selected = 4
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Minimized"
popup/item_1/id = 1
popup/item_2/text = "Maximized"
popup/item_2/id = 2
popup/item_3/text = "Fullscreen"
popup/item_3/id = 3
popup/item_4/text = "Fullscreen Exclusive"
popup/item_4/id = 4

[connection signal="item_selected" from="Options_Graphics/List/Fullscreen_Modes" to="." method="_on_fullscreen_modes_item_selected"]
